<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_activity_main_search"
        android:icon="@drawable/baseline_filter_list_24"
        app:showAsAction="always"
        android:title="@string/search">
    </item>
</menu>