<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.activity.DetailsMeetingActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/details_activity"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_details"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:elevation="10dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <FrameLayout
                        android:id="@+id/frame_layout_detail_activity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

        </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>